// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly when closed 1`] = `
.c3 {
  font-family: Unica77LLWebMedium,'Helvetica Neue',Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-size: 14px;
  line-height: 20px;
  padding-top: 1px;
}

.c2 {
  cursor: pointer;
  position: relative;
  white-space: nowrap;
  border: 2px solid;
  border-radius: 3px;
  margin-left: 10px;
  margin-right: 10px;
  padding-left: 20px;
  padding-right: 20px;
  height: 41px;
  -webkit-transition: 0.25s ease;
  transition: 0.25s ease;
  background-color: #FFF;
  border-color: #E5E5E5;
  color: #000;
}

.c2.loading {
  -webkit-transition: none;
  transition: none;
  background-color: transparent;
  color: transparent;
  border: 0;
  cursor: auto;
}

.c2.disabled {
  background-color: #E5E5E5;
  border-color: #E5E5E5;
  color: #FFF;
  pointer-events: none;
}

.c4 {
  cursor: pointer;
  position: relative;
  white-space: nowrap;
  border: 2px solid;
  border-radius: 3px;
  padding-left: 20px;
  padding-right: 20px;
  height: 41px;
  -webkit-transition: 0.25s ease;
  transition: 0.25s ease;
  background-color: #000;
  border-color: #000;
  color: #FFF;
}

.c4.loading {
  -webkit-transition: none;
  transition: none;
  background-color: transparent;
  color: transparent;
  border: 0;
  cursor: auto;
}

.c4.disabled {
  background-color: #E5E5E5;
  border-color: #E5E5E5;
  color: #FFF;
  pointer-events: none;
}

.c0 {
  position: fixed;
  left: 50%;
  top: 40%;
  width: 600px;
  height: auto;
  background: white;
  z-index: 2;
  padding: 20px;
  visibility: hidden;
  opacity: 0;
  -webkit-transform: scale(0.95) translate(-50%,-50%);
  -ms-transform: scale(0.95) translate(-50%,-50%);
  transform: scale(0.95) translate(-50%,-50%);
  -webkit-transition: all 0.25s;
  transition: all 0.25s;
}

.c0.modal-open {
  visibility: visible;
  opacity: 1;
  -webkit-transform: scale(1) translate(-50%,-50%);
  -ms-transform: scale(1) translate(-50%,-50%);
  transform: scale(1) translate(-50%,-50%);
  -webkit-transition: all 0.125s;
  transition: all 0.125s;
}

.c0 h1 {
  font-weight: normal;
  font-size: 1.5em;
  color: #666666;
}

.c0 section {
  color: #333333;
  border-top: solid 1px #E5E5E5;
  margin-top: 1em;
  padding-top: 1em;
}

.c0 section p {
  margin-bottom: 1em;
}

.c1 {
  border-top: solid 1px #E5E5E5;
  margin-top: 1em;
  padding-top: 1em;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c1 a {
  margin-left: 1em;
}

@media not all and (pointer:coarse),not all and (-moz-touch-enabled:1) {
  .c2:hover {
    background-color: #FFF;
    border-color: #000;
    color: #000;
  }
}

@media not all and (pointer:coarse),not all and (-moz-touch-enabled:1) {
  .c4:hover {
    background-color: #6E1EFF;
    border-color: #6E1EFF;
    color: #FFF;
  }
}

<div
  className="c0"
>
  I am closed
  <div
    className="c1"
  >
    <button
      className="  c2"
      height="41px"
      onClick={[Function]}
    >
      <div
        className="c3"
        fontFamily={
          Object {
            "fontFamily": "Unica77LLWebMedium, 'Helvetica Neue', Helvetica, Arial, sans-serif",
            "fontWeight": 500,
          }
        }
        fontSize="14px"
      >
        Go back
      </div>
    </button>
    <button
      className="  c4"
      height="41px"
      onClick={[Function]}
    >
      <div
        className="c3"
        fontFamily={
          Object {
            "fontFamily": "Unica77LLWebMedium, 'Helvetica Neue', Helvetica, Arial, sans-serif",
            "fontWeight": 500,
          }
        }
        fontSize="14px"
      >
        Continue
      </div>
    </button>
  </div>
</div>
`;

exports[`renders correctly when open 1`] = `
.c3 {
  font-family: Unica77LLWebMedium,'Helvetica Neue',Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-size: 14px;
  line-height: 20px;
  padding-top: 1px;
}

.c2 {
  cursor: pointer;
  position: relative;
  white-space: nowrap;
  border: 2px solid;
  border-radius: 3px;
  margin-left: 10px;
  margin-right: 10px;
  padding-left: 20px;
  padding-right: 20px;
  height: 41px;
  -webkit-transition: 0.25s ease;
  transition: 0.25s ease;
  background-color: #FFF;
  border-color: #E5E5E5;
  color: #000;
}

.c2.loading {
  -webkit-transition: none;
  transition: none;
  background-color: transparent;
  color: transparent;
  border: 0;
  cursor: auto;
}

.c2.disabled {
  background-color: #E5E5E5;
  border-color: #E5E5E5;
  color: #FFF;
  pointer-events: none;
}

.c4 {
  cursor: pointer;
  position: relative;
  white-space: nowrap;
  border: 2px solid;
  border-radius: 3px;
  padding-left: 20px;
  padding-right: 20px;
  height: 41px;
  -webkit-transition: 0.25s ease;
  transition: 0.25s ease;
  background-color: #000;
  border-color: #000;
  color: #FFF;
}

.c4.loading {
  -webkit-transition: none;
  transition: none;
  background-color: transparent;
  color: transparent;
  border: 0;
  cursor: auto;
}

.c4.disabled {
  background-color: #E5E5E5;
  border-color: #E5E5E5;
  color: #FFF;
  pointer-events: none;
}

.c0 {
  position: fixed;
  left: 50%;
  top: 40%;
  width: 600px;
  height: auto;
  background: white;
  z-index: 2;
  padding: 20px;
  visibility: hidden;
  opacity: 0;
  -webkit-transform: scale(0.95) translate(-50%,-50%);
  -ms-transform: scale(0.95) translate(-50%,-50%);
  transform: scale(0.95) translate(-50%,-50%);
  -webkit-transition: all 0.25s;
  transition: all 0.25s;
}

.c0.modal-open {
  visibility: visible;
  opacity: 1;
  -webkit-transform: scale(1) translate(-50%,-50%);
  -ms-transform: scale(1) translate(-50%,-50%);
  transform: scale(1) translate(-50%,-50%);
  -webkit-transition: all 0.125s;
  transition: all 0.125s;
}

.c0 h1 {
  font-weight: normal;
  font-size: 1.5em;
  color: #666666;
}

.c0 section {
  color: #333333;
  border-top: solid 1px #E5E5E5;
  margin-top: 1em;
  padding-top: 1em;
}

.c0 section p {
  margin-bottom: 1em;
}

.c1 {
  border-top: solid 1px #E5E5E5;
  margin-top: 1em;
  padding-top: 1em;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c1 a {
  margin-left: 1em;
}

@media not all and (pointer:coarse),not all and (-moz-touch-enabled:1) {
  .c2:hover {
    background-color: #FFF;
    border-color: #000;
    color: #000;
  }
}

@media not all and (pointer:coarse),not all and (-moz-touch-enabled:1) {
  .c4:hover {
    background-color: #6E1EFF;
    border-color: #6E1EFF;
    color: #FFF;
  }
}

<div
  className="modal-open c0"
>
  I am open
  <div
    className="c1"
  >
    <button
      className="  c2"
      height="41px"
      onClick={[Function]}
    >
      <div
        className="c3"
        fontFamily={
          Object {
            "fontFamily": "Unica77LLWebMedium, 'Helvetica Neue', Helvetica, Arial, sans-serif",
            "fontWeight": 500,
          }
        }
        fontSize="14px"
      >
        Go back
      </div>
    </button>
    <button
      className="  c4"
      height="41px"
      onClick={[Function]}
    >
      <div
        className="c3"
        fontFamily={
          Object {
            "fontFamily": "Unica77LLWebMedium, 'Helvetica Neue', Helvetica, Arial, sans-serif",
            "fontWeight": 500,
          }
        }
        fontSize="14px"
      >
        Continue
      </div>
    </button>
  </div>
</div>
`;
